Made j2mod compile with Java 1.3 source level and Cinterion CMTK libraries.